src/test/deca/syntax/invalid/test_synt7.deca
//Resultat:
//      Erreur syntaxique : declaration invalide
class A {
int x;
}
class B {
float y;
}
{
A a a;
B b;
a>b;
}
